Add theme color and context title to HaTS user survey notification.

- In MD notification, system notifcations should have |accent_color|.
  This does not have effect when MD notification is disabled.
- The context title "Hats" is not clear from the user viewpoint.
  This was previously not user facing string, so it was OK, but in
  MD notification, it is used as the context title, so This is changed
  to "Survey".

Screenshot before this CL: https://screenshot.googleplex.com/Jm2KKCvEux5
Screenshot after this CL: https://screenshot.googleplex.com/14v8K0KjBuy

TEST=manual
BUG=761250

Change-Id: I1c377a5ce00516d7c62549447f9c68d4fb9e0d5e
Reviewed-on: https://chromium-review.googlesource.com/646413
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Reviewed-by: Malay Keshav <malaykeshav@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499889}
Former-commit-id: 79770ff3fb7646ad50e044cfcb8652f23580ece7