chrome/browser/chromeos/hats/hats_notification_controller.cc
@@ -30,6 +30,7 @@
 #include "ui/base/resource/resource_bundle.h"
 #include "ui/gfx/image/image_skia_rep.h"
 #include "ui/message_center/message_center.h"
+#include "ui/message_center/message_center_style.h"
 #include "ui/message_center/notification_types.h"
 #include "ui/strings/grit/ui_strings.h"
 
@@ -274,7 +275,7 @@ Notification* HatsNotificationController::CreateNotification() {
   optional.buttons.push_back(message_center::ButtonInfo(
       l10n_util::GetStringUTF16(IDS_ASH_HATS_NOTIFICATION_TAKE_SURVEY_BUTTON)));
 
-  return new Notification(
+  Notification* notification = new Notification(
       message_center::NOTIFICATION_TYPE_SIMPLE,
       l10n_util::GetStringUTF16(IDS_ASH_HATS_NOTIFICATION_TITLE),
       l10n_util::GetStringUTF16(IDS_ASH_HATS_NOTIFICATION_BODY),
@@ -283,6 +284,9 @@ Notification* HatsNotificationController::CreateNotification() {
                                  ash::system_notifier::kNotifierHats),
       l10n_util::GetStringUTF16(IDS_MESSAGE_CENTER_NOTIFIER_HATS_NAME),
       GURL(kNotificationOriginUrl), kNotificationId, optional, this);
+  notification->set_accent_color(
+      message_center::kSystemNotificationColorNormal);
+  return notification;
 }
 
 void HatsNotificationController::UpdateLastInteractionTime() {
